# bincode_bench

./: Cargo.toml
benches/: my_bench.rs
src/: lib.rs
