[package]
name = "bincode_bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bincode = { version = "2.0.0-rc.2" }
bincode_1 = { version = "1.3.3", package = "bincode"}
serde = { version = "*", features = ["derive"] }

[dev-dependencies]
criterion = "0.4.0"

 [[bench]]
name = "my_bench"
harness = false
